fix alignment of product in list view

--- a/src/styles/ListView.css
+++ b/src/styles/ListView.css
@@ -48,7 +48,7 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  width: 92%;
+  width: 100%;
 }
 
 .list .card-title {
